--- a/package.json
+++ b/package.json
@@ -1,17 +1,36 @@
 {
-  "name": "mcd-dashboard",
+  "name": "mcd-cdp-portal",
+  "description": "The primary web interface for interacting with the Multi-Collateral Dai smart contract system.",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "react": "^16.7.0",
-    "react-dom": "^16.7.0",
-    "react-scripts": "2.1.3"
+    "@craco/craco": "^3.1.0",
+    "@makerdao/dai": "^0.9.10",
+    "@makerdao/multicall": "0.2.123-alpha.beta",
+    "@makerdao/ui-components": "^1.0.0-alpha.28",
+    "bignumber.js": "^8.0.2",
+    "navi": "^0.10.7",
+    "react": "^16.8.0-alpha.0",
+    "react-dom": "^16.8.0-alpha.0",
+    "react-json-view": "^1.19.1",
+    "react-navi": "^0.10.6",
+    "react-redux": "^6.0.0",
+    "react-scripts": "2.1.1",
+    "redux": "^4.0.1",
+    "redux-devtools-extension": "^2.13.7",
+    "styled-components": "^4.1.3"
   },
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "start": "HTTPS=true NODE_ENV=development NODE_PATH=src/ craco start",
+    "build": "NODE_PATH=src/ craco build",
+    "precommit": "lint-staged",
+    "remove-sourcemaps": "rm -rf build/static/js/*.map"
+  },
+  "lint-staged": {
+    "*.{js,json}": [
+      "prettier --write --single-quote",
+      "git add"
+    ]
   },
   "eslintConfig": {
     "extends": "react-app"
@@ -21,5 +40,11 @@
     "not dead",
     "not ie <= 11",
     "not op_mini all"
-  ]
+  ],
+  "devDependencies": {
+    "husky": "^1.3.1",
+    "lint-staged": "^8.1.0",
+    "prettier": "^1.15.3",
+    "webpack-bundle-analyzer": "^3.0.3"
+  }
 }
