start syncing ui
Co-authored-by: Michael Elliot <michael@digital.com.au>

--- a/now.json
+++ b/now.json
@@ -2,7 +2,19 @@
   "version": 2,
   "name": "mcd-cdp-portal",
   "alias": ["mcd-cdp-portal-staging"],
-  "builds": [{ "src": "package.json", "use": "@now/static-build" }],
+  "builds": [
+    {
+      "src": "package.json",
+      "use": "@now/static-build",
+      "config": { "distDir": "build" }
+    }
+  ],
+  "routes": [
+    { "src": "^/static/(.*)", "dest": "/static/$1" },
+    { "src": "^/favicon.ico", "dest": "/favicon.ico" },
+    { "src": "^/manifest.json", "dest": "/manifest.json" },
+    { "src": "^/(.*)", "dest": "/index.html" }
+  ],
   "static": {
     "rewrites": [
       {
