--- a/package.json
+++ b/package.json
@@ -1,28 +1,34 @@
 {
   "name": "mcd-cdp-portal",
   "description": "The primary web interface for interacting with the Multi-Collateral Dai smart contract system.",
-  "version": "0.1.0",
-  "private": true,
+  "version": "0.0.1",
+  "contributors": [
+    "Michael Elliot <mike@makerdao.com>",
+    "Joshua Levine <joshua@makerdao.com>"
+  ],
   "dependencies": {
     "@craco/craco": "^3.1.0",
     "@makerdao/dai": "^0.9.10",
     "@makerdao/multicall": "0.2.123-alpha.beta",
     "@makerdao/ui-components": "^1.0.0-alpha.28",
     "bignumber.js": "^8.0.2",
+    "jazzicon": "^1.5.0",
     "navi": "^0.10.7",
     "react": "^16.8.0-alpha.0",
     "react-dom": "^16.8.0-alpha.0",
     "react-json-view": "^1.19.1",
     "react-navi": "^0.10.6",
     "react-redux": "^6.0.0",
-    "react-scripts": "2.1.1",
+    "react-scripts": "2.1.3",
     "redux": "^4.0.1",
     "redux-devtools-extension": "^2.13.7",
+    "reselect": "^4.0.0",
     "styled-components": "^4.1.3"
   },
   "scripts": {
     "start": "HTTPS=true NODE_ENV=development NODE_PATH=src/ craco start",
     "build": "NODE_PATH=src/ craco build",
+    "now-build": "yarn build",
     "precommit": "lint-staged",
     "remove-sourcemaps": "rm -rf build/static/js/*.map"
   },
