--- a/now.json
+++ b/now.json
@@ -1,45 +1,5 @@
 {
   "version": 2,
   "name": "mcd-cdp-portal",
-  "alias": ["mcd-cdp-portal-staging"],
-  "builds": [
-    {
-      "src": "package.json",
-      "use": "@now/static-build",
-      "config": { "distDir": "build" }
-    }
-  ],
-  "routes": [
-    { "src": "^/static/(.*)", "dest": "/static/$1" },
-    { "src": "^/favicon.ico", "dest": "/favicon.ico" },
-    { "src": "^/manifest.json", "dest": "/manifest.json" },
-    { "src": "^/(.*)", "dest": "/index.html" }
-  ],
-  "static": {
-    "rewrites": [
-      {
-        "source": "**",
-        "destination": "/index.html"
-      }
-    ],
-    "headers": [
-      {
-        "source": "**",
-        "headers": [
-          {
-            "key": "X-Frame-Options",
-            "value": "Deny"
-          },
-          {
-            "key": "X-Content-Type-Options",
-            "value": "nosniff"
-          },
-          {
-            "key": "X-XSS-protection",
-            "value": "1; mode=block"
-          }
-        ]
-      }
-    ]
-  }
+  "alias": ["mcd-cdp-portal-staging"]
 }
