--- a/package.json
+++ b/package.json
@@ -9,27 +9,28 @@
   "dependencies": {
     "@craco/craco": "^3.1.0",
     "@makerdao/dai": "^0.9.10",
-    "@makerdao/multicall": "0.2.123-alpha.beta",
+    "@makerdao/multicall": "0.2.234-alpha",
     "@makerdao/ui-components": "^1.0.0-alpha.28",
     "bignumber.js": "^8.0.2",
     "jazzicon": "^1.5.0",
     "navi": "^0.10.7",
     "react": "^16.8.0-alpha.0",
     "react-dom": "^16.8.0-alpha.0",
-    "react-json-view": "^1.19.1",
     "react-navi": "^0.10.6",
     "react-redux": "^6.0.0",
     "react-scripts": "2.1.3",
     "redux": "^4.0.1",
     "redux-devtools-extension": "^2.13.7",
     "reselect": "^4.0.0",
-    "styled-components": "^4.1.3"
+    "styled-components": "^4.1.3",
+    "walletconnect": "^0.7.28",
+    "walletconnect-qrcode-modal": "^0.7.28"
   },
   "scripts": {
     "start": "HTTPS=true NODE_ENV=development NODE_PATH=src/ craco start",
     "build": "NODE_PATH=src/ craco build",
-    "now-build": "yarn build",
     "precommit": "lint-staged",
+    "deploy": "yarn build && now ./build -A ../now.json",
     "remove-sourcemaps": "rm -rf build/static/js/*.map"
   },
   "lint-staged": {
@@ -49,6 +50,7 @@
   ],
   "devDependencies": {
     "husky": "^1.3.1",
+    "lighthouse": "^4.0.0",
     "lint-staged": "^8.1.0",
     "prettier": "^1.15.3",
     "webpack-bundle-analyzer": "^3.0.3"
