--- a/now.json
+++ b/now.json
@@ -1,5 +1,17 @@
 {
   "version": 2,
-  "name": "mcd-cdp-portal",
-  "alias": ["mcd-cdp-portal-staging"]
+  "name": "my-navi-project",
+  "builds": [
+    {
+      "src": "package.json",
+      "use": "@now/static-build",
+      "config": { "distDir": "build" }
+    }
+  ],
+  "routes": [
+    { "src": "^/static/(.*)", "dest": "/static/$1" },
+    { "src": "^/favicon.ico", "dest": "/favicon.ico" },
+    { "src": "^/manifest.json", "dest": "/manifest.json" },
+    { "src": "^/(.*)", "dest": "/index.html" }
+  ]
 }
