--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "navi": "^0.10.7",
     "react": "^16.8.0-alpha.0",
     "react-dom": "^16.8.0-alpha.0",
+    "react-localization": "^1.0.13",
     "react-navi": "^0.10.6",
     "react-redux": "^6.0.0",
     "react-scripts": "2.1.3",
@@ -31,6 +32,7 @@
     "build": "NODE_PATH=src/ craco build",
     "precommit": "lint-staged",
     "deploy": "yarn build && now ./build -A ../now.json",
+    "now-build": "yarn build",
     "remove-sourcemaps": "rm -rf build/static/js/*.map"
   },
   "lint-staged": {
