--- a/package.json
+++ b/package.json
@@ -18,8 +18,8 @@
     "jazzicon": "^1.5.0",
     "mixpanel-browser": "^2.26.0",
     "navi": "^0.10.7",
-    "react": "^16.8.0-alpha.0",
-    "react-dom": "^16.8.0-alpha.0",
+    "react": "^16.8.0",
+    "react-dom": "^16.8.0",
     "react-ga": "^2.5.7",
     "react-localization": "^1.0.13",
     "react-navi": "^0.10.6",
