--- a/src/references/config.json
+++ b/src/references/config.json
@@ -1,7 +1,7 @@
 {
   "multicall": {
     "kovan": {
-      "rpcNode": "https://kovan.infura.io",
+      "rpcUrl": "https://kovan.infura.io",
       "multicallAddress": "0xb2155b4f516a2e93fd0c40fdba57a3ab39952236",
       "block": "latest"
     }
