move grid layout into page staging function
* remove vestigial functions
* enforce maker access via hooks
* check for metemask network w/o using maker
* async maker creation

--- a/src/references/config.json
+++ b/src/references/config.json
@@ -1,8 +1,12 @@
 {
-  "supportedNetworkIds": ["1", "42"],
+  "supportedNetworkIds": ["42", "1"],
   "rpcUrls": {
     "1": "https://mainnet.infura.io",
     "42": "https://kovan.infura.io"
+  },
+  "networkNames": {
+    "1": "mainnet",
+    "42": "kovan"
   },
   "defaultNetwork": "42",
   "exTestchainApiUrl": "http://18.185.172.121:4000/chain"
