--- a/src/references/config.json
+++ b/src/references/config.json
@@ -1,12 +1,18 @@
 {
-  "supportedNetworkIds": ["42", "1"],
+  "supportedNetworkIds": ["999", "42", "1"],
   "rpcUrls": {
     "1": "https://mainnet.infura.io",
     "42": "https://kovan.infura.io"
   },
   "networkNames": {
     "1": "mainnet",
-    "42": "kovan"
+    "42": "kovan",
+    "999": "testchain"
+  },
+  "networkDisplayNames": {
+    "1": "Mainnet",
+    "42": "Kovan Testnet",
+    "999": "Testchain"
   },
   "defaultNetwork": "42",
   "exTestchainApiUrl": "http://18.185.172.121:4000/chain"
