responsive nav, ui-components update, HMR

--- a/package.json
+++ b/package.json
@@ -11,12 +11,15 @@
   ],
   "dependencies": {
     "@craco/craco": "^3.4.1",
+    "@hot-loader/react-dom": "^16.8.1",
     "@makerdao/dai": "^0.10.0",
     "@makerdao/dai-plugin-config": "^0.0.2",
     "@makerdao/dai-plugin-ledger-web": "^0.9.7",
     "@makerdao/dai-plugin-trezor-web": "^0.9.4",
     "@makerdao/multicall": "0.5.1-alpha.5",
-    "@makerdao/ui-components": "^1.0.0-alpha.28",
+    "@makerdao/ui-components-core": "^0.1.0",
+    "@makerdao/ui-components-footer": "^0.1.0",
+    "@makerdao/ui-components-header": "^0.1.0",
     "bignumber.js": "^8.0.2",
     "jazzicon": "^1.5.0",
     "mixpanel-browser": "^2.26.0",
@@ -24,6 +27,7 @@
     "react": "^16.8.0",
     "react-dom": "^16.8.0",
     "react-ga": "^2.5.7",
+    "react-hot-loader": "^4.6.5",
     "react-localization": "^1.0.13",
     "react-navi": "^0.10.6",
     "react-redux": "^6.0.0",
