--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "react-dom": "^16.8.0",
     "react-ga": "^2.5.7",
     "react-hot-loader": "^4.6.5",
+    "react-icons": "^3.4.0",
     "react-localization": "^1.0.13",
     "react-navi": "^0.10.6",
     "react-redux": "^6.0.0",
