--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "jazzicon": "^1.5.0",
     "mixpanel-browser": "^2.26.0",
     "navi": "^0.10.7",
+    "prop-types": "^15.7.2",
     "react": "^16.8.0",
     "react-dom": "^16.8.0",
     "react-ga": "^2.5.7",
@@ -38,7 +39,8 @@
     "redux": "^4.0.1",
     "redux-devtools-extension": "^2.13.7",
     "reselect": "^4.0.0",
-    "styled-components": "^4.1.3"
+    "styled-components": "^4.1.3",
+    "styled-system": "^4.0.1"
   },
   "scripts": {
     "start": "NODE_ENV=development NODE_PATH=src/ craco start",
