--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
   "homepage": "https://mcd.makerdao.com",
   "contributors": [
     "Michael Elliot <mike@makerdao.com>",
-    "Joshua Levine <joshua@makerdao.com>"
+    "Joshua Levine <joshua@makerdao.com>",
+    "Adrian le Bas <adrian@makerdao.com>"
   ],
   "dependencies": {
     "@craco/craco": "^3.4.1",
