--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
   },
   "scripts": {
     "start": "NODE_ENV=development NODE_PATH=src/ craco start",
+    "start:https": "HTTPS=true NODE_ENV=development NODE_PATH=src/ craco start",
     "build": "NODE_PATH=src/ craco build",
     "precommit": "lint-staged",
     "test": "echo \"Live long or Dai hard\"",
