--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "@walletconnect/qrcode-modal": "^1.0.0-beta.6",
     "bignumber.js": "^8.0.2",
     "jazzicon": "^1.5.0",
+    "lodash.round": "^4.0.4",
     "mixpanel-browser": "^2.26.0",
     "navi": "^0.10.7",
     "prop-types": "^15.7.2",
