--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "react-scripts": "2.1.5",
     "redux": "^4.0.1",
     "redux-devtools-extension": "^2.13.7",
+    "redux-thunk": "^2.3.0",
     "reselect": "^4.0.0",
     "styled-components": "^4.1.3",
     "styled-system": "^4.0.1"
