--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@walletconnect/browser": "^1.0.0-beta.6",
     "@walletconnect/qrcode-modal": "^1.0.0-beta.6",
     "bignumber.js": "^8.0.2",
+    "eslint-plugin-react-hooks": "^1.5.0",
     "jazzicon": "^1.5.0",
     "lodash.round": "^4.0.4",
     "mixpanel-browser": "^2.26.0",
