--- a/package.json
+++ b/package.json
@@ -12,9 +12,9 @@
   ],
   "dependencies": {
     "@craco/craco": "^3.4.1",
+    "@hot-loader/react-dom": "^16.8.4",
     "@makerdao/dai": "^0.12.0",
     "@makerdao/dai-plugin-config": "^0.0.3",
-    "@hot-loader/react-dom": "^16.8.4",
     "@makerdao/dai-plugin-ledger-web": "^0.9.7",
     "@makerdao/dai-plugin-mcd": "^0.0.5",
     "@makerdao/dai-plugin-trezor-web": "^0.9.5",
@@ -35,10 +35,12 @@
     "react-ga": "^2.5.7",
     "react-hot-loader": "^4.8.0",
     "react-icons": "^3.4.0",
+    "react-jazzicon": "^0.1.3",
     "react-localization": "^1.0.13",
     "react-navi": "^0.10.6",
     "react-redux": "^6.0.0",
     "react-scripts": "2.1.5",
+    "react-spring": "^8.0.15",
     "redux": "^4.0.1",
     "redux-devtools-extension": "^2.13.7",
     "reselect": "^4.0.0",
