update price feed strategy + minor tweaks

--- a/package.json
+++ b/package.json
@@ -20,12 +20,13 @@
     "@makerdao/dai-plugin-mcd": "^0.0.8",
     "@makerdao/dai-plugin-trezor-web": "^0.9.5",
     "@makerdao/multicall": "0.5.1-alpha.5",
-    "@makerdao/ui-components-core": "^0.1.0",
+    "@makerdao/ui-components-core": "0.1.0",
     "@makerdao/ui-components-footer": "^0.1.0",
     "@makerdao/ui-components-header": "^0.1.0",
     "@makerdao/ui-components-onboarding": "^0.1.0",
     "@walletconnect/browser": "^1.0.0-beta.6",
     "@walletconnect/qrcode-modal": "^1.0.0-beta.6",
+    "async-retry": "^1.2.3",
     "bignumber.js": "^8.0.2",
     "eslint-plugin-react-hooks": "^1.5.0",
     "lodash.round": "^4.0.4",
