call the test network just "test"
to avoid confusion between "testnet" and "testchain"

--- a/src/references/config.json
+++ b/src/references/config.json
@@ -8,7 +8,7 @@
   "networkNames": {
     "1": "mainnet",
     "42": "kovan",
-    "999": "testchain"
+    "999": "test"
   },
   "networkDisplayNames": {
     "1": "Mainnet",
