use maker data for watcher
- get rpcUrl, multicallAddress, all other addresses, & the list of ilks from maker instance
- remove WatcherProvider since components should not need to interact with the watcher directly
- use the MCD plugin's CdpType.getPrice() for price values

--- a/package.json
+++ b/package.json
@@ -17,8 +17,8 @@
     "@makerdao/dai": "^0.14.0",
     "@makerdao/dai-plugin-config": "^0.0.3",
     "@makerdao/dai-plugin-ledger-web": "^0.9.7",
-    "@makerdao/dai-plugin-trezor-web": "^0.9.6",
     "@makerdao/dai-plugin-mcd": "^0.0.10",
+    "@makerdao/dai-plugin-trezor-web": "^0.9.6",
     "@makerdao/multicall": "0.5.1-alpha.5",
     "@makerdao/ui-components-core": "0.1.0",
     "@makerdao/ui-components-footer": "^0.1.0",
@@ -29,6 +29,7 @@
     "bignumber.js": "^8.0.2",
     "eslint-plugin-react-hooks": "^1.5.0",
     "lodash.round": "^4.0.4",
+    "lodash.uniqby": "^4.7.0",
     "mixpanel-browser": "^2.26.0",
     "navi": "^0.12.4",
     "prop-types": "^15.7.2",
