--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "@makerdao/dai": "^0.15.0",
     "@makerdao/dai-plugin-config": "^0.0.3",
     "@makerdao/dai-plugin-ledger-web": "^0.9.7",
-    "@makerdao/dai-plugin-mcd": "^0.1.0",
+    "@makerdao/dai-plugin-mcd": "0.1.1",
     "@makerdao/dai-plugin-trezor-web": "^0.9.6",
     "@makerdao/multicall": "0.5.1-alpha.5",
     "@makerdao/ui-components-core": "0.1.0",
