--- a/now.json
+++ b/now.json
@@ -1,14 +1,21 @@
 {
   "version": 2,
   "name": "MCD CDP Portal",
-  "alias": "mcd-cdp-portal-staging",
+  "alias": "mcd-cdp-portal-develop",
+  "builds": [
+    {
+      "src": "package.json",
+      "use": "@now/static-build",
+      "config": { "distDir": "build" }
+    }
+  ],
   "routes": [
     { "src": "^/static/(.*)", "dest": "/static/$1" },
     { "src": "^/favicon.ico", "dest": "/favicon.ico" },
     { "src": "^/manifest.json", "dest": "/manifest.json" },
     { "src": "^/(.*)", "dest": "/index.html" }
   ],
- "github": {
+  "github": {
     "autoAlias": false
   }
 }
