--- a/.travis.yml
+++ b/.travis.yml
@@ -12,15 +12,14 @@ before_deploy:
   - yarn build
   - npm install now --no-save
 deploy:
-
   - provider: script
-    script: now ./build --token $NOW_TOKEN --team mkr-js-prod -A ../now.json && now alias --token $NOW_TOKEN --team mkr-js-prod -A ../now.json
+    script: now --token $NOW_TOKEN --team mkr-js-prod && now alias --token $NOW_TOKEN --team mkr-js-prod
     skip_cleanup: true
     on:
       branch: master
 
   - provider: script
-    script: now ./build --token $NOW_TOKEN --team mkr-js-prod -A ../now.dev.json && now alias --token $NOW_TOKEN --team mkr-js-prod -A ./now.dev.json
+    script: now --token $NOW_TOKEN --team mkr-js-prod -A ./now.dev.json && now alias --token $NOW_TOKEN --team mkr-js-prod -A ./now.dev.json
     skip_cleanup: true
     on:
       branch: develop
