--- a/now.json
+++ b/now.json
@@ -1,7 +1,7 @@
 {
   "version": 2,
   "name": "MCD CDP Portal",
-  "alias": "mcd-cdp-portal-develop",
+  "alias": "mcd-cdp-portal-staging",
   "builds": [
     {
       "src": "package.json",
