Revert "make sure travis behaves"
This reverts commit 437bbdfbfe57d1bedc018e1b47097c9c24e963fd.

--- a/.travis.yml
+++ b/.travis.yml
@@ -7,9 +7,9 @@ cache:
     - node_modules
   timeout: 9000
 install:
-  - npm install
+  - yarn install
 before_deploy:
-  - npm run build
+  - yarn build
   - npm install now --no-save
 deploy:
   - provider: script
