--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "@walletconnect/browser": "^1.0.0-beta.6",
     "@walletconnect/qrcode-modal": "^1.0.0-beta.6",
     "bignumber.js": "^8.0.2",
+    "body-scroll-lock": "^2.6.1",
     "eslint-plugin-react-hooks": "^1.5.0",
     "lodash.round": "^4.0.4",
     "lodash.uniqby": "^4.7.0",
