--- a/src/references/config.json
+++ b/src/references/config.json
@@ -8,7 +8,7 @@
   "networkNames": {
     "1": "mainnet",
     "42": "kovan",
-    "999": "test"
+    "999": "testnet"
   },
   "networkDisplayNames": {
     "1": "Mainnet",
