write the latest commit to a json file and display a link in the sidebar

--- a/.travis.yml
+++ b/.travis.yml
@@ -9,6 +9,7 @@ cache:
 install:
   - yarn install
 before_deploy:
+  - yarn write-git-version
   - yarn build
   - npm install now --no-save
 deploy:
