--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
     "@makerdao/dai-plugin-ledger-web": "^0.9.7",
     "@makerdao/dai-plugin-mcd": "0.1.3",
     "@makerdao/dai-plugin-trezor-web": "^0.9.6",
-    "@makerdao/multicall": "0.5.1-alpha.5",
+    "@makerdao/multicall": "0.6.1",
     "@makerdao/ui-components-core": "0.2.1",
     "@makerdao/ui-components-footer": "^0.1.7",
     "@makerdao/ui-components-header": "^0.1.7",
@@ -29,6 +29,7 @@
     "bignumber.js": "^8.0.2",
     "body-scroll-lock": "^2.6.1",
     "eslint-plugin-react-hooks": "^1.5.0",
+    "immer": "^3.1.1",
     "lodash.round": "^4.0.4",
     "lodash.uniqby": "^4.7.0",
     "mixpanel-browser": "^2.26.0",
@@ -41,11 +42,9 @@
     "react-jazzicon": "^0.1.3",
     "react-localization": "^1.0.13",
     "react-navi": "^0.12.4",
-    "react-redux": "^6.0.0",
     "react-scripts": "2.1.5",
     "react-spring": "^8.0.15",
-    "redux": "^4.0.1",
-    "redux-devtools-extension": "^2.13.7",
+    "reinspect": "^1.0.1",
     "styled-components": "^4.1.3",
     "styled-system": "^4.0.1"
   },
