--- a/package.json
+++ b/package.json
@@ -54,7 +54,7 @@
     "start:https": "HTTPS=true NODE_ENV=development NODE_PATH=src/ craco start",
     "build": "NODE_PATH=src/ craco build",
     "precommit": "lint-staged",
-    "test": "echo \"Live long or Dai hard\"",
+    "test": "jest",
     "deploy": "yarn build && now ./build -A ../now.json",
     "now-build": "yarn build",
     "remove-sourcemaps": "rm -rf build/static/js/*.map",
@@ -76,10 +76,16 @@
     "not op_mini all"
   ],
   "devDependencies": {
+    "@babel/plugin-proposal-class-properties": "^7.4.4",
+    "@babel/preset-env": "^7.4.4",
+    "@babel/preset-react": "^7.0.0",
+    "babel-jest": "^24.8.0",
     "husky": "^1.3.1",
+    "jest": "^24.8.0",
     "lighthouse": "^4.0.0",
     "lint-staged": "^8.1.0",
     "prettier": "^1.15.3",
+    "react-test-renderer": "^16.8.6",
     "webpack-bundle-analyzer": "^3.0.3"
   }
 }
