--- a/package.json
+++ b/package.json
@@ -78,6 +78,7 @@
     "@babel/plugin-proposal-class-properties": "^7.4.4",
     "@babel/preset-env": "^7.4.4",
     "@babel/preset-react": "^7.0.0",
+    "@makerdao/testchain": "makerdao/testchain",
     "husky": "^1.3.1",
     "lighthouse": "^4.0.0",
     "lint-staged": "^8.1.0",
