add `yarn ci` to travis

--- a/.travis.yml
+++ b/.travis.yml
@@ -9,7 +9,7 @@ cache:
 install:
   - yarn install
 script:
-  - yarn test --coverage
+  - yarn ci
 before_deploy:
   - yarn write-git-version
   - yarn build
