--- a/package.json
+++ b/package.json
@@ -54,6 +54,7 @@
     "build": "NODE_PATH=src/ craco build",
     "precommit": "lint-staged",
     "test": "jest",
+    "ci": "./node_modules/@makerdao/testchain/scripts/launch -s mcd-step-4 --fast --ci jest --coverage",
     "deploy": "yarn build && now ./build -A ../now.json",
     "now-build": "yarn build",
     "remove-sourcemaps": "rm -rf build/static/js/*.map",
