--- a/package.json
+++ b/package.json
@@ -30,8 +30,7 @@
     "body-scroll-lock": "^2.6.1",
     "eslint-plugin-react-hooks": "^1.5.0",
     "immer": "^3.1.1",
-    "lodash.round": "^4.0.4",
-    "lodash.uniqby": "^4.7.0",
+    "lodash": "^4.17.11",
     "mixpanel-browser": "^2.26.0",
     "navi": "^0.12.4",
     "prop-types": "^15.7.2",
