--- a/now.json
+++ b/now.json
@@ -16,6 +16,7 @@
     { "src": "^/(.*)", "dest": "/index.html" }
   ],
   "github": {
+    "enabled": true,
     "autoAlias": false
   },
   "env": {
