--- a/package.json
+++ b/package.json
@@ -52,7 +52,7 @@
     "start:https": "HTTPS=true NODE_ENV=development NODE_PATH=src/ craco start",
     "build": "NODE_PATH=src/ craco build",
     "precommit": "lint-staged",
-    "test": "jest",
+    "test": "NODE_PATH=src/ jest",
     "ci": "./node_modules/@makerdao/testchain/scripts/launch -s mcd-step-4 --fast --ci jest --coverage",
     "deploy": "yarn build && now ./build -A ../now.json",
     "now-build": "yarn write-env-variables && yarn build",
