try deploying now only from travis
- remove now.dev.json
- deploy with Now from Travis for all branches
- replace Now for Github functionality using Travis env vars:
  - write commit sha & message to version.json
  - alias deployment to mcd-cdp-portal-git-[branch].mkr-js-prod.now.sh

--- a/now.json
+++ b/now.json
@@ -1,7 +1,6 @@
 {
   "version": 2,
   "name": "MCD CDP Portal",
-  "alias": "mcd-cdp-portal-staging",
   "builds": [
     {
       "src": "package.json",
@@ -16,7 +15,7 @@
     { "src": "^/(.*)", "dest": "/index.html" }
   ],
   "github": {
-    "autoAlias": false
+    "enabled": false
   },
   "env": {
     "BLANK_SECRET": "@blank-secret"
