--- a/package.json
+++ b/package.json
@@ -54,10 +54,8 @@
     "precommit": "lint-staged",
     "test": "NODE_PATH=src/ jest",
     "ci": "./node_modules/@makerdao/testchain/scripts/launch -s mcd-step-4 --fast --ci jest --coverage",
-    "deploy": "yarn build && now ./build -A ../now.json",
-    "now-build": "yarn write-env-variables && yarn build",
-    "remove-sourcemaps": "rm -rf build/static/js/*.map",
-    "write-env-variables": "./src/scripts/write-env-vars.sh"
+    "now-build": "yarn build",
+    "remove-sourcemaps": "rm -rf build/static/js/*.map"
   },
   "lint-staged": {
     "*.{js,json}": [
