--- a/package.json
+++ b/package.json
@@ -44,7 +44,7 @@
     "react-scripts": "2.1.5",
     "react-spring": "^8.0.15",
     "reinspect": "^1.0.1",
-    "styled-components": "4.1.3",
+    "styled-components": "^4.1.3",
     "styled-system": "^4.0.1"
   },
   "scripts": {
