--- a/package.json
+++ b/package.json
@@ -77,11 +77,11 @@
     "@babel/preset-env": "^7.4.4",
     "@babel/preset-react": "^7.0.0",
     "@makerdao/testchain": "makerdao/testchain",
+    "@testing-library/react": "^8.0.4",
     "husky": "^1.3.1",
     "lighthouse": "^4.0.0",
     "lint-staged": "^8.1.0",
     "prettier": "^1.15.3",
-    "react-testing-library": "^6.1.2",
     "wait-for-expect": "^1.1.1",
     "webpack-bundle-analyzer": "^3.0.3"
   }
