--- a/package.json
+++ b/package.json
@@ -52,8 +52,9 @@
     "start:https": "HTTPS=true NODE_ENV=development NODE_PATH=src/ craco start",
     "build": "NODE_PATH=src/ craco --max_old_space_size=8192 build",
     "precommit": "lint-staged",
-    "test": "NODE_PATH=src/ craco test",
-    "ci": "./node_modules/@makerdao/testchain/scripts/launch -s mcd-step-4 --fast --ci yarn test --coverage",
+    "test": "NODE_PATH=src/ yarn test:net --ci craco test",
+    "test:net": "./node_modules/@makerdao/testchain/scripts/launch -s default --fast",
+    "ci": "yarn test --coverage",
     "now-build": "yarn build",
     "remove-sourcemaps": "rm -rf build/static/js/*.map"
   },
