--- a/package.json
+++ b/package.json
@@ -14,10 +14,10 @@
     "@craco/craco": "^3.4.1",
     "@hot-loader/react-dom": "^16.8.4",
     "@makerdao/currency": "^0.9.5",
-    "@makerdao/dai": "0.16.5",
+    "@makerdao/dai": "0.17.0",
     "@makerdao/dai-plugin-config": "^0.2.7-rc.4",
     "@makerdao/dai-plugin-ledger-web": "^0.9.7",
-    "@makerdao/dai-plugin-mcd": "^0.2.8-rc3",
+    "@makerdao/dai-plugin-mcd": "0.2.9",
     "@makerdao/dai-plugin-trezor-web": "^0.9.6",
     "@makerdao/multicall": "0.6.1",
     "@makerdao/ui-components-core": "0.2.2",
