--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "@makerdao/dai": "0.17.1",
     "@makerdao/dai-plugin-config": "^0.2.7-rc.4",
     "@makerdao/dai-plugin-ledger-web": "^0.9.7",
-    "@makerdao/dai-plugin-mcd": "0.2.10-1",
+    "@makerdao/dai-plugin-mcd": "0.2.10-4",
     "@makerdao/dai-plugin-trezor-web": "^0.9.6",
     "@makerdao/multicall": "0.6.1",
     "@makerdao/ui-components-core": "0.2.5",
@@ -77,7 +77,7 @@
     "@babel/plugin-proposal-class-properties": "^7.4.4",
     "@babel/preset-env": "^7.4.4",
     "@babel/preset-react": "^7.0.0",
-    "@makerdao/testchain": "makerdao/testchain",
+    "@makerdao/testchain": "0.2.10-4",
     "@testing-library/react": "^8.0.4",
     "husky": "^1.3.1",
     "lighthouse": "^4.0.0",
