--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "@makerdao/dai": "0.18.4",
     "@makerdao/dai-plugin-config": "^0.2.7-rc.4",
     "@makerdao/dai-plugin-ledger-web": "^0.9.7",
-    "@makerdao/dai-plugin-mcd": "0.2.10-4",
+    "@makerdao/dai-plugin-mcd": "0.2.11",
     "@makerdao/dai-plugin-trezor-web": "^0.9.6",
     "@makerdao/ui-components-core": "0.2.5",
     "@makerdao/ui-components-footer": "^0.1.7",
