--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@makerdao/ui-components-footer": "^0.1.7",
     "@makerdao/ui-components-header": "^0.1.7",
     "@makerdao/ui-components-onboarding": "^0.1.2",
+    "@testing-library/jest-dom": "^4.1.0",
     "@walletconnect/browser": "^1.0.0-beta.6",
     "@walletconnect/qrcode-modal": "^1.0.0-beta.6",
     "bignumber.js": "^8.0.2",
