--- a/.travis.yml
+++ b/.travis.yml
@@ -10,9 +10,10 @@ install:
   - yarn install
 env:
   - NODE_PATH=src/
+before_script:
+  - npm install -g codecov
 script:
   - yarn ci
-  - npm install -g codecov
   - codecov
 before_deploy:
   - npm install -g now
