--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "body-scroll-lock": "^2.6.1",
     "immer": "^3.1.1",
     "lodash": "^4.17.11",
+    "lodash.debounce": "^4.0.8",
     "mixpanel-browser": "^2.26.0",
     "navi": "^0.12.4",
     "prop-types": "^15.7.2",
