--- a/package.json
+++ b/package.json
@@ -21,9 +21,9 @@
     "@makerdao/dai-plugin-trezor-web": "^0.9.6",
     "@makerdao/dai-plugin-walletlink": "^0.0.1",
     "@makerdao/test-helpers": "^0.2.0",
-    "@makerdao/ui-components-core": "0.2.5",
-    "@makerdao/ui-components-footer": "^0.1.7",
-    "@makerdao/ui-components-header": "^0.1.7",
+    "@makerdao/ui-components-core": "0.2.7",
+    "@makerdao/ui-components-footer": "^0.1.16",
+    "@makerdao/ui-components-header": "^0.1.11-alpha.6",
     "@makerdao/ui-components-onboarding": "^0.1.2",
     "@testing-library/jest-dom": "^4.1.0",
     "@walletconnect/browser": "^1.0.0-beta.36",
