--- a/package.json
+++ b/package.json
@@ -54,7 +54,7 @@
     "start:https": "HTTPS=true NODE_ENV=development NODE_PATH=src/ craco start",
     "build": "NODE_PATH=src/ craco --max_old_space_size=8192 build",
     "precommit": "lint-staged",
-    "test": "NODE_PATH=src/ yarn test:net --ci craco test",
+    "test": "NODE_PATH=src/ yarn test:net --ci craco test --runInBand",
     "test:net": "./node_modules/@makerdao/testchain/scripts/launch -s default --fast",
     "ci": "yarn test --coverage",
     "now-build": "yarn build",
