Use recommended now.json routes config for SPAs.
This way, files in /public don't need to be added one by one. See https://zeit.co/docs/configuration#routes/advanced/spa-fallback

--- a/now.json
+++ b/now.json
@@ -9,10 +9,8 @@
     }
   ],
   "routes": [
-    { "src": "^/static/(.*)", "dest": "/static/$1" },
-    { "src": "^/favicon.ico", "dest": "/favicon.ico" },
-    { "src": "^/manifest.json", "dest": "/manifest.json" },
-    { "src": "^/(.*)", "dest": "/index.html" }
+    { "handle": "filesystem" },
+    { "src": "/.*", "dest": "/index.html" }
   ],
   "github": {
     "enabled": false
