--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,10 +1,17 @@
-version: 2
-jobs:
-  build:
-    docker:
-      - image: circleci/node:lts
-    steps:
-      - checkout
-      - run: npm i yarn
-      - run: yarn
-      - run: yarn test
+ version: 2
+ jobs:
+   build:
+     docker:
+       - image: levity/dapptools-node
+     steps:
+       - checkout
+       - run:
+          name: Install dependencies
+          command: |
+            npm i --no-save yarn
+            yarn
+       - run:
+          name: Run tests
+          command: |
+            source /home/circleci/setup-env.sh
+            yarn test
