--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "@makerdao/dai": "0.18.9",
     "@makerdao/dai-plugin-config": "^0.2.7-rc.4",
     "@makerdao/dai-plugin-ledger-web": "^0.9.7",
-    "@makerdao/dai-plugin-mcd": "0.2.14-3",
+    "@makerdao/dai-plugin-mcd": "0.2.15",
     "@makerdao/dai-plugin-trezor-web": "^0.9.6",
     "@makerdao/dai-plugin-walletlink": "^0.0.1",
     "@makerdao/test-helpers": "^0.2.0",
@@ -81,7 +81,7 @@
     "@babel/plugin-proposal-class-properties": "^7.4.4",
     "@babel/preset-env": "^7.4.4",
     "@babel/preset-react": "^7.0.0",
-    "@makerdao/testchain": "0.2.14",
+    "@makerdao/testchain": "0.2.15-1",
     "@testing-library/react": "^8.0.4",
     "husky": "^1.3.1",
     "lighthouse": "^4.0.0",
