--- a/package.json
+++ b/package.json
@@ -14,10 +14,10 @@
     "@craco/craco": "^5.4.0",
     "@hot-loader/react-dom": "^16.8.4",
     "@makerdao/currency": "^0.9.5",
-    "@makerdao/dai": "0.18.9",
+    "@makerdao/dai": "^0.19.0-rc1",
     "@makerdao/dai-plugin-config": "^0.2.7-rc.4",
     "@makerdao/dai-plugin-ledger-web": "^0.9.7",
-    "@makerdao/dai-plugin-mcd": "0.2.14-3",
+    "@makerdao/dai-plugin-mcd": "^0.2.15",
     "@makerdao/dai-plugin-trezor-web": "^0.9.6",
     "@makerdao/dai-plugin-walletlink": "^0.0.1",
     "@makerdao/test-helpers": "^0.2.0",
