--- a/package.json
+++ b/package.json
@@ -56,8 +56,8 @@
     "start:https": "HTTPS=true NODE_ENV=development NODE_PATH=src/ craco start",
     "build": "NODE_PATH=src/ craco --max_old_space_size=8192 build",
     "precommit": "lint-staged",
-    "test": "NODE_PATH=src/ yarn test:net --ci craco test --runInBand",
-    "test:net": "./node_modules/@makerdao/testchain/scripts/launch -s default --fast",
+    "test": "NODE_PATH=src/ yarn testchain --ci craco test --runInBand",
+    "testchain": "./node_modules/@makerdao/testchain/scripts/launch -s default --fast",
     "ci": "yarn test --coverage",
     "now-build": "yarn build",
     "remove-sourcemaps": "rm -rf build/static/js/*.map"
