--- a/package.json
+++ b/package.json
@@ -78,6 +78,7 @@
   ],
   "devDependencies": {
     "@babel/plugin-proposal-class-properties": "^7.4.4",
+    "@babel/plugin-proposal-optional-chaining": "^7.6.0",
     "@babel/preset-env": "^7.4.4",
     "@babel/preset-react": "^7.0.0",
     "@makerdao/testchain": "0.2.15-1",
