TO-78: leave trade deploy untouched

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -56,8 +56,8 @@ jobs:
             aws configure set aws_access_key_id $AWS_ACCESS_KEY_ID
             aws configure set aws_secret_access_key $AWS_SECRET_ACCESS_KEY
 
-            aws s3 sync build s3://$AWS_BUCKET_NAME/ --delete --exclude /trade
-            # aws cloudfront create-invalidation --distribution-id $AWS_CF_ID --paths /*
+            aws s3 sync build s3://$AWS_BUCKET_NAME/ --delete --exclude trade/*
+            aws cloudfront create-invalidation --distribution-id $AWS_CF_ID --paths /*
 
 workflows:
   version: 2
