--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "@craco/craco": "^5.4.0",
     "@hot-loader/react-dom": "^16.8.4",
     "@makerdao/currency": "^0.9.5",
-    "@makerdao/dai": "^0.19.0-rc1",
+    "@makerdao/dai": "^0.20.0",
     "@makerdao/dai-plugin-config": "^0.2.7-rc.4",
     "@makerdao/dai-plugin-ledger-web": "^0.9.7",
     "@makerdao/dai-plugin-mcd": "^0.2.16",
