--- a/package.json
+++ b/package.json
@@ -85,6 +85,10 @@
     "@babel/preset-react": "^7.0.0",
     "@makerdao/testchain": "0.2.15-1",
     "@testing-library/react": "^8.0.4",
+    "babel-eslint": "^10.0.3",
+    "eslint": "^6.6.0",
+    "eslint-plugin-react": "^7.16.0",
+    "eslint-plugin-react-hooks": "^2.2.0",
     "husky": "^1.3.1",
     "lighthouse": "^4.0.0",
     "lint-staged": "^9.2.5",
