fix cloudfront config

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -69,7 +69,7 @@ jobs:
             aws configure set aws_secret_access_key $AWS_SECRET_ACCESS_KEY
 
             aws s3 sync build s3://$AWS_BUCKET_NAME/ --delete --exclude trade/*
-            aws cloudfront create-invalidation --distribution-id $AWS_CF_ID --paths /*
+            aws cloudfront create-invalidation --distribution-id $AWS_CF_ID --paths "/*"
 
 workflows:
   version: 2
