--- a/package.json
+++ b/package.json
@@ -85,6 +85,7 @@
     "@babel/preset-react": "^7.0.0",
     "@makerdao/testchain": "0.2.17-1",
     "@testing-library/react": "^8.0.4",
+    "babel-eslint": "^10.0.3",
     "eslint": "^6.6.0",
     "eslint-plugin-react": "^7.16.0",
     "eslint-plugin-react-hooks": "^2.2.0",
