Update title and other name references to Oasis

--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,6 +1,6 @@
 {
-  "short_name": "MCD-CDP-Portal",
-  "name": "Multi-Collateral Dai CDP Portal",
+  "short_name": "Oasis",
+  "name": "Oasis",
   "icons": [
     {
       "src": "favicon.ico",
