--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "navi": "^0.13.6",
     "prop-types": "^15.7.2",
     "react": "^16.8.0",
+    "react-device-detect": "^1.9.10",
     "react-dom": "^16.8.0",
     "react-ga": "^2.5.7",
     "react-helmet": "^5.2.1",
