re-enable exhaustive-deps linter rule

--- a/.eslintrc
+++ b/.eslintrc
@@ -24,7 +24,6 @@
     "quotes": ["error", "single", { "avoidEscape": true }],
     "react/prop-types": "off",
     "react/display-name": "off",
-    "react-hooks/rules-of-hooks": "error",
-    "react-hooks/exhaustive-deps": "off"
+    "react-hooks/rules-of-hooks": "error"
   }
 }
