--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "@makerdao/dai": "^0.23.0-rc.2",
     "@makerdao/dai-plugin-config": "^0.2.7-rc.4",
     "@makerdao/dai-plugin-ledger-web": "^0.9.7",
-    "@makerdao/dai-plugin-mcd": "^1.0.2",
+    "@makerdao/dai-plugin-mcd": "^1.0.3",
     "@makerdao/dai-plugin-trezor-web": "^0.9.6",
     "@makerdao/dai-plugin-walletconnect": "^0.0.8",
     "@makerdao/dai-plugin-walletlink": "^0.0.1",
@@ -84,7 +84,7 @@
     "@babel/plugin-proposal-optional-chaining": "^7.6.0",
     "@babel/preset-env": "^7.4.4",
     "@babel/preset-react": "^7.0.0",
-    "@makerdao/testchain": "0.2.17-1",
+    "@makerdao/testchain": "1.0.1",
     "@testing-library/react": "^8.0.4",
     "babel-eslint": "^10.0.3",
     "eslint": "^6.6.0",
