re-enable codecov

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -29,7 +29,9 @@ jobs:
           name: Run tests
           command: |
             source /home/circleci/setup-env.sh
-            yarn test
+            yarn test --coverage
+            npm i --no-save codecov
+            ./node_modules/.bin/codecov
   deploy_staging:
     docker:
       - image: circleci/node:lts
