Revert "remove 'github' property from now.json config"
This reverts commit 1bea21808252a14448373a2603e71c6ee6e92973.

--- a/now.json
+++ b/now.json
@@ -12,6 +12,9 @@
     { "handle": "filesystem" },
     { "src": "/.*", "dest": "/index.html" }
   ],
+  "github": {
+    "enabled": false
+  },
   "env": {
     "BLANK_SECRET": "@blank-secret"
   }
