--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "@walletconnect/qrcode-modal": "^1.0.0-beta.36",
     "bignumber.js": "^8.0.2",
     "body-scroll-lock": "^2.6.1",
+    "decimal.js": "^10.2.0",
     "immer": "^3.1.1",
     "js-cookie": "^2.2.1",
     "lodash": "^4.17.11",
