--- a/package.json
+++ b/package.json
@@ -66,7 +66,7 @@
     "remove-sourcemaps": "rm -rf build/static/js/*.map",
     "deploy-main": "./scripts/deploy-mainnet"
   },
-  "engines": { "node": "10.x" },
+  "engines": { "node": ">=10.x.x" },
   "lint-staged": {
     "*.js": ["prettier --write --single-quote"]
   },
