CDP-566 refactor tracker factory into a hook, update tests

--- a/src/references/config.json
+++ b/src/references/config.json
@@ -27,6 +27,7 @@
   "trackingPages": {
     "Overview": "Overview",
     "CDP": "Dashboard",
-    "Save": "Overview"
+    "Save": "Dashboard",
+    "Landing": "Landing"
   }
 }
