--- a/src/references/config.json
+++ b/src/references/config.json
@@ -23,5 +23,6 @@
     "1337": "Ex_Testchain"
   },
   "defaultNetwork": "1",
-  "exTestchainApiUrl": "http://localhost:4000/chain"
+  "exTestchainApiUrl": "http://localhost:4000/chain",
+  "showFeeds": ["ETH", "BAT"]
 }
