--- a/package.json
+++ b/package.json
@@ -100,5 +100,6 @@
     "prettier": "^1.15.3",
     "wait-for-expect": "^1.1.1",
     "webpack-bundle-analyzer": "^3.0.3"
-  }
+  },
+  "types": "./typings/main.d.ts"
 }
