update testchain & adjust test values for latest snapshot

--- a/package.json
+++ b/package.json
@@ -88,7 +88,7 @@
     "@babel/plugin-proposal-optional-chaining": "^7.6.0",
     "@babel/preset-env": "^7.4.4",
     "@babel/preset-react": "^7.0.0",
-    "@makerdao/testchain": "1.0.3",
+    "@makerdao/testchain": "^1.0.7",
     "@testing-library/react": "^8.0.4",
     "babel-eslint": "^10.0.3",
     "eslint": "^6.6.0",
