--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -70,7 +70,7 @@ jobs:
             aws configure set aws_access_key_id $STAGE_AWS_ACCESS_KEY_ID
             aws configure set aws_secret_access_key $STAGE_AWS_SECRET_ACCESS_KEY
 
-            aws s3 sync build s3://$STAGE_AWS_BUCKET_NAME/ --delete --exclude trade/*
+            aws s3 sync build s3://$STAGE_AWS_BUCKET_NAME/ --delete --exclude 'trade/*' --exclude 'expired/*'
             aws cloudfront create-invalidation --distribution-id $STAGE_AWS_CF_ID --paths "/*"
   deploy_prod:
     docker:
@@ -97,7 +97,7 @@ jobs:
             aws configure set aws_access_key_id $AWS_ACCESS_KEY_ID
             aws configure set aws_secret_access_key $AWS_SECRET_ACCESS_KEY
 
-            aws s3 sync build s3://$AWS_BUCKET_NAME/ --delete --exclude trade/*
+            aws s3 sync build s3://$AWS_BUCKET_NAME/ --delete --exclude 'trade/*' --exclude 'expired/*'
             aws cloudfront create-invalidation --distribution-id $AWS_CF_ID --paths "/*"
 
 workflows:
