--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -43,7 +43,7 @@ jobs:
       - run:
           name: Deploy to Now
           command: |
-            npm i --no-save now
+            npm i --no-save now@1.3.5
             ./scripts/now-deploy.sh
   deploy_aws_staging:
     docker:
