--- a/package.json
+++ b/package.json
@@ -14,10 +14,10 @@
     "@craco/craco": "^5.4.0",
     "@hot-loader/react-dom": "^16.8.4",
     "@makerdao/currency": "^0.9.5",
-    "@makerdao/dai": "^0.25.0",
+    "@makerdao/dai": "file:.yalc/@makerdao/dai",
     "@makerdao/dai-plugin-config": "^0.2.7-rc.4",
     "@makerdao/dai-plugin-ledger-web": "^0.9.7",
-    "@makerdao/dai-plugin-mcd": "^1.1.0",
+    "@makerdao/dai-plugin-mcd": "file:.yalc/@makerdao/dai-plugin-mcd",
     "@makerdao/dai-plugin-trezor-web": "^0.9.6",
     "@makerdao/dai-plugin-walletconnect": "^0.0.8",
     "@makerdao/dai-plugin-walletlink": "^0.0.2",
