--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "@craco/craco": "^5.4.0",
     "@hot-loader/react-dom": "^16.8.4",
     "@makerdao/currency": "^0.9.5",
-    "@makerdao/dai": "^0.26.0",
+    "@makerdao/dai": "^0.27.0",
     "@makerdao/dai-plugin-config": "^0.2.7-rc.4",
     "@makerdao/dai-plugin-ledger-web": "^0.9.7",
     "@makerdao/dai-plugin-mcd": "^1.2.1",
@@ -70,19 +70,12 @@
     "node": ">=10.x.x"
   },
   "lint-staged": {
-    "*.js": [
-      "prettier --write --single-quote"
-    ]
+    "*.js": ["prettier --write --single-quote"]
   },
   "eslintConfig": {
     "extends": "react-app"
   },
-  "browserslist": [
-    ">0.2%",
-    "not dead",
-    "not ie <= 11",
-    "not op_mini all"
-  ],
+  "browserslist": [">0.2%", "not dead", "not ie <= 11", "not op_mini all"],
   "devDependencies": {
     "@babel/plugin-proposal-class-properties": "^7.4.4",
     "@babel/plugin-proposal-optional-chaining": "^7.6.0",
