--- a/package.json
+++ b/package.json
@@ -55,11 +55,11 @@
     "styled-system": "^4.0.1"
   },
   "scripts": {
-    "start": "NODE_ENV=development NODE_PATH=src/ craco start",
-    "start:https": "HTTPS=true NODE_ENV=development NODE_PATH=src/ craco start",
-    "build": "NODE_PATH=src/ craco --max_old_space_size=8192 build",
+    "start": "NODE_ENV=development craco start",
+    "start:https": "HTTPS=true NODE_ENV=development craco start",
+    "build": "craco --max_old_space_size=8192 build",
     "precommit": "lint-staged",
-    "test": "NODE_PATH=src/ yarn testchain --ci craco test --runInBand",
+    "test": "yarn testchain --ci craco test --runInBand",
     "testchain": "./node_modules/@makerdao/testchain/scripts/launch -s default --fast",
     "ci": "yarn test --coverage",
     "now-build": "yarn build",
